--- a/front-end/src/components/Footer/Footer.module.scss
+++ b/front-end/src/components/Footer/Footer.module.scss
@@ -1,9 +1,10 @@
 .footer {
-    color: rgb(183, 176, 176);
+    color: rgb(167, 169, 172);
     position: absolute;
     bottom: 0;
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: center;
+    bottom: 1em;
 }
