--- a/front-end/src/components/Footer/Footer.module.scss
+++ b/front-end/src/components/Footer/Footer.module.scss
@@ -1,10 +1,17 @@
+
 .footer {
-    color: rgb(167, 169, 172);
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-    bottom: 1em;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+//   background-color: rgb(46,44,44);
+  background-color: rgb(167, 169, 172);
+  color: white;
+  text-align: center;
+  padding: 5px 5px;
+  justify-content: center;
+  // display: flex;
+  bottom: 0;
 }
+
+
