--- a/front-end/src/components/MainLogo/MainLogo.module.scss
+++ b/front-end/src/components/MainLogo/MainLogo.module.scss
@@ -3,4 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    // box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2),
+    //             0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
