--- a/front-end/src/components/ProductCard/ProductCard.module.scss
+++ b/front-end/src/components/ProductCard/ProductCard.module.scss
@@ -1,5 +1,44 @@
 .card {
-    border: 1px solid black;
-    width: 200px;
-    height: 200px; 
+    width: 250px;
+    // height: 500px; 
+    // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    // text-align: center;
+    // padding: 1em;
+    // margin: 10px 0px 30px 30px;
+    // border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+     max-width: 300px;
+     margin: auto;
+    text-align: center;
+    font-family: arial;
+    // position: relative;
+}
+
+.price {
+    color: grey;
+    font-size: 22px;
+}
+
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.card button:hover {
+    opacity: 0.7;
+}
+
+.name {
+padding: 1em;
+}
+
+.image {
+margin-top: 1em;
 }
