--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    
+  min-height: 400px;
+      margin-bottom: 100px;
+      clear: both;
+      padding: 20px;
 }
 
 code {
